tests/NormalTests/paczka1/fuzzy1/54040711.err
Error in line 2: eNH65GHruB S582 0,17
Error in line 1: PdYxQvlcSZd S913 47,0
Error in line 5: mn2YDem S604 61,8
Error in line 17: S582 S6!4 88,4
Error in line 29: 1VK S582 27,8
Error in line 35: PdYxQvlcSZd S582 2,6
Error in line 32: eNH65GHruB S604 8,7
Error in line 33: 1VK S786 84,6
